[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abyss-ai-sdk"
version = "0.1.3"
description = "Multi-provider AI utility with structured responses and streaming"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "groq>=0.9.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Abyss-Systems/Abyss-SDK-Python"

[tool.hatch.build.targets.wheel]
packages = ["abyss_ai_sdk"]